--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.13.4",
     "mongodb": "^2.1.6",
     "mongoose": "~4.1.9",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "q": "1.4.1"
   }
 }
