--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "https://github.com/cremalab"
   },
-  "author": "",
+  "author": "http://Crema.us",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.10.0",
